--- a/WebAppService/Views/Shared/_Layout.cshtml
+++ b/WebAppService/Views/Shared/_Layout.cshtml
@@ -28,7 +28,8 @@
     <link rel="stylesheet" href="~/web/assets/css/responsive.css">
     <link href="~/web/assets/css/main.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -166,6 +167,9 @@
     <script src="~/web/assets/js/vendor/jquery.counterup.min.js"></script>
     <script src="~/web/assets/js/vendor/jquery.theia.sticky.js"></script>
     <script src="~/web/assets/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
     <script type="text/javascript">
         $(document).ready(function () {
             const menuIcon = document.getElementById("menuToggle");
