--- a/WebAppService/wwwroot/web/assets/css/home.css
+++ b/WebAppService/wwwroot/web/assets/css/home.css
@@ -1,6 +1,6 @@
 ﻿.layout-home {
     background: #e1f3f3;
-    height: 524px;
+    height: 500px;
 }
 
 .layout-home-white {
@@ -76,7 +76,7 @@
 }
 
 .author-info-small-text {
-    color: #999999;
+    color: #757575;
 }
 
 .service-card {
@@ -84,7 +84,7 @@
     border-radius: 25.91px;
     padding: 40px 10px;
     margin-bottom: 30px;
-
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 .service-img-wrapper {
@@ -188,8 +188,12 @@
     scroll-behavior: smooth;
     gap: 20px;
     padding-bottom: 10px;
+    margin-right: 15px;
+    margin-left: 25px;
 }
-
+.swiper-slide {
+    margin-right: 0px;
+}
 .service-card {
     flex: 0 0 300px;
     background: #fff;
@@ -323,9 +327,41 @@
 .fa{
     color:#FF7F22;
 }
-.for-more{
-    text-align:center;
+.for-more {
+    text-align: center;
+    font-family: 'Manrope', sans-serif;
+    font-weight: bold;
+    font-size: 16px;
 }
+#sliderContainer {
+    height: 315px;
+    overflow-y: auto;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+}
+.item_vd {
+    height: 160px;
+}
+
+.swiper-slide {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.swiper-slide {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.swiper {
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+}
+
+
+
 @media (max-width: 576px) {
     /* CSS dành cho mobile */
     .box-item {
@@ -334,10 +370,12 @@
         text-align: center;
         margin-top: 5px;
     }
-
+    .layout-home{
+        height:590px;
+    }
     .icon_box {
         font-size: 16px;
-        margin-top: 10px;
+        margin-top: 7px;
     }
 
     .author-info {
@@ -373,18 +411,18 @@
         text-align: center;
     }
 
-    .LayoutHome {
-        height: 530px;
-    }
+ 
 
     #LayoutHome1 {
         margin-bottom: 50px;
     }
 
     .floating-box {
-        width: 375px;
-        height: 131px;
-        margin-left: 1px;
+        width: 350px;
+        height: 120px;
+        margin-left: 0px;
+        top: -72px;
+        text-align: center;
     }
 
 
@@ -394,8 +432,12 @@
 
         .box_item_text h5 {
             margin-top: 0px;
-        }
 
+            font-size:10px;
+        }
+        .box_item_text p {
+            font-size: 9px;
+        }
     .img_avt2 {
         height: 300px;
         width: 329px;
@@ -464,13 +506,17 @@
     }
     #sliderContainer {
         max-height: 270px;
-        overflow-y: auto;
-        scrollbar-width: none; /* Firefox */
-        -ms-overflow-style: none;
-    }
-    item_vd {
+
+        margin-top: 15px;
         padding: 0px;
         margin-left: 16px;
+    }
+    .swiper-slide {
+        padding: 0px;
+       
+    }
+    .item_vd{
+        height:90px;
     }
     
 
